--- a/themes/default/login.html
+++ b/themes/default/login.html
@@ -117,7 +117,7 @@
         </div>
         <div class="contain">
             <img src="img/1.jpg" alt="">
-            <form action="<?php echo site_url('user/signin');?>" method="POST">
+            <form id="contactForm" action="<?php echo site_url('user/signin');?>" method="POST">
                 <div>
                     <label>账户：</label>
                     <input type="text" placeholder="请输入您的手机号" name="username">
@@ -136,5 +136,22 @@
         </div>
     </div>
     <script src="<?php echo base_url('themes/default/js/zepto.min.js');?>" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript">
+        var frm = $('#contactForm');
+        frm.submit(function (ev) {
+            $.ajax({
+                type: frm.attr('method'),
+                url: frm.attr('action'),
+                data: frm.serialize(),
+                success: function (data) {
+                    alert('ok');
+                },
+                error:function () {
+                    alert('您输入的密码不正确！')
+                }
+            });
+            ev.preventDefault();
+        });
+    </script>
 </body>
 </html>
