--- a/themes/default/goods.html
+++ b/themes/default/goods.html
@@ -37,6 +37,7 @@
     <meta name="nightmode" content="enable/disable">
     <meta name="imagemode" content="force">
     <meta name="format-detection" content="telephone=no,email=no">
+    <title><?php echo $goods['goods_name'];?></title>
     <link rel="stylesheet" href="<?php echo base_url('themes/default/css/public.css');?>">
     <link rel="stylesheet" href="<?php echo base_url('themes/default/css/common.css');?>">
     <script>
