--- a/themes/default/goods.html
+++ b/themes/default/goods.html
@@ -71,18 +71,38 @@
                 </li>
             </ul>
         </div>
+        <input type="hidden" id="goods_name" value="<?php echo $goods['goods_name'];?>">
+        <input type="hidden" id="shop_price" value="<?php echo $goods['shop_price'];?>">
+        <input type="hidden" id="goods_id" value="<?php echo $goods['goods_id'];?>">
         <div class="buycar">
             <a href="javascript:;">
                 <p class="addnow">立即购买</p>
             </a>
-            <a href="javascript:;">
-                <p class="addcarnow">加入购物车</p>
-            </a>
+            <a href="javascript:;" class="addcarnow">加入购物车</a>
             <a href="javascript:;">
                 <p class="car"><span>1</span></p>
             </a>
         </div>
     </div>
-    <script src="js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="<?php echo base_url('themes/default/js/zepto.min.js');?>" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript">
+        // 加入购物车
+        $('.addcarnow').on('click', function(){
+            var goods_id = $('#goods_id').val();
+            var goods_name =$('#goods_name').val();
+            var shop_price = $('#shop_price').val();
+            var goods_nums = $('#good_nums').val();
+
+            $.post("<?php echo site_url('cart/add');?>", { goods_id:goods_id, goods_name:goods_name, goods_nums:goods_nums, shop_price:shop_price}, function(jd){
+                    if(jd.success==1){
+                        location.href=jd.msg;
+                    }else{
+                        $.alert(jd.msg, "提醒");
+                    }
+                }, 'json');
+        });
+
+    </script>
+
 </body>
 </html>
