--- a/themes/default/login.html
+++ b/themes/default/login.html
@@ -116,7 +116,7 @@
 
         </div>
         <div class="contain">
-            <img src="img/1.jpg" alt="">
+            <img src="<?php echo base_url('themes/default/img/timg.jpg');?>" alt="">
             <form id="contactForm" action="<?php echo site_url('user/signin');?>" method="POST">
                 <div>
                     <label>账户：</label>
