--- a/themes/default/register.html
+++ b/themes/default/register.html
@@ -107,7 +107,7 @@
             <span>注册</span>
         </div>
         <div class="contain">
-            <img src="img/1.jpg" alt="">
+            <img src="<?php echo base_url('themes/default/img/timg.jpg');?>" alt="">
             <form action="<?php echo site_url('user/do_register');?>" method="POST">
                 <div>
                     <label>账户：</label>
