--- a/themes/default/gouwuche.html
+++ b/themes/default/gouwuche.html
@@ -55,10 +55,20 @@
         <span>购物车</span>
         <a></a>
     </div>
-    <div class="centerbox" id="boxList">
-        <img src="icon/car.png" alt="">
-        <p>亲，您的购物车是空的，赶紧购买吧！</p>
-        <button>去逛逛</button>
+    <!--<div class="centerbox" id="boxList">-->
+        <!--<img src="icon/car.png" alt="">-->
+        <!--<p>亲，您的购物车是空的，赶紧购买吧！</p>-->
+        <!--<button>去逛逛</button>-->
+    <!--</div>-->
+    <div id="goodList" class="goodList">
+        <div class="clearfix">
+            <img src="img/1.jpg" alt="">
+            <span class="goodsName">加油卡</span>
+            <div class="goodsChoose">
+                <p>￥199</p>
+                <p><a href="">删除</a></p>
+            </div>
+        </div>
     </div>
     <div class="footnav">
         <ul>
