--- a/themes/default/register.html
+++ b/themes/default/register.html
@@ -108,7 +108,7 @@
         </div>
         <div class="contain">
             <img src="<?php echo base_url('themes/default/img/timg.jpg');?>" alt="">
-            <form action="<?php echo site_url('user/do_register');?>" method="POST">
+            <form action="<?php echo site_url('user/do_register');?>" method="POST" id="contactForm">
                 <div>
                     <label>账户：</label>
                     <input type="text" placeholder="请输入您的手机号" name="username">
@@ -136,13 +136,15 @@
                 url: frm.attr('action'),
                 data: frm.serialize(),
                 success: function (data) {
+                    data=JSON.parse(data);
                     if(data.success == 1){
                         alert('注册成功');
-                        location.href = '/home/login';
-                    }
+                        location.href = "<?php echo site_url('/user/login');?>";
+                    }else
+                        alert(data.msg);
                 },
                 error:function (data) {
-                    alert(data.message);
+                    alert(data.msg);
                 }
             });
             ev.preventDefault();
