--- a/pc/flow.html
+++ b/pc/flow.html
@@ -58,19 +58,23 @@
 				<tbody>
 					<?php foreach($carts as $cart) :?>
 					<tr>
-						<td class="gwc_list_pic"><a href="<?php echo site_url('goods/index').'/'.$cart['id'] ;?>"><img src="<?php echo base_url('public/uploads/shihua.jpg');?>" /></a></td>
+						<td class="gwc_list_pic"><a href="<?php echo site_url('goods/index').'/'.$cart['id'] ;?>">
+							<img src="<?php echo base_url('public/uploads/shihua.jpg');?>" /></a></td>
 						<td class="gwc_list_title"><?php echo $cart['name'];?></td>
 						<td class="gwc_list_danjia"><span>￥<strong id="danjia_001"><?php echo $cart['price'];?></strong></span></td>
 						<td class="gwc_list_shuliang"><span><a class="good_num_jian this_good_nums" did="danjia_001" xid="xiaoji_001" ty="-" valId="goods_001" href="javascript:void(0);">-</a><input type="text" value="<?php echo $cart['qty'];?>" id="goods_001" class="good_nums" /><a href="javascript:void(0);" did="danjia_001" xid="xiaoji_001" ty="+" class="good_num_jia this_good_nums" valId="goods_001">+</a></span></td>
 						<td class="gwc_list_xiaoji"><span>￥<strong id="xiaoji_001" class="good_xiaojis"><?php echo $cart['subtotal'];?></strong></span></td>
-						<td class="gwc_list_caozuo"><a href="">收藏</a><a href="<?php echo site_url('cart/delete').'/'.$cart['rowid'];?>" class="shop_good_delete">删除</a></td>
+						<td class="gwc_list_caozuo">
+							<a href="">收藏</a>
+							<a href="<?php echo site_url('cart/delete').'/'.$cart['rowid'];?>" class="shop_good_delete">删除</a></td>
 					</tr>
 					<?php endforeach;?>
 				</tbody>
 				<tfoot>
 					<tr>
 						<td colspan="6">
-							<div class="gwc_foot_zongjia">商品总价(不含运费)<span>￥<strong id="good_zongjia"><?php echo $this->cart->format_number($this->cart->total()); ?></strong></span></div>
+							<div class="gwc_foot_zongjia">商品总价(不含运费)<span>￥<strong id="good_zongjia">
+								<?php echo $this->cart->format_number($this->cart->total()); ?></strong></span></div>
 							<div class="clear"></div>
 							<div class="gwc_foot_links">
 								<a href="" class="go">继续购物</a>
