--- a/themes/default/order_confirm.html
+++ b/themes/default/order_confirm.html
@@ -10,9 +10,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>订单确认</title>
-    <link rel="stylesheet" href="css/public.css">
-    <link rel="stylesheet" href="css/common.css">
-    <script type="text/javascript" src="lib/jquery-2.1.4.js"></script>
+    <link rel="stylesheet" href="<?php echo base_url('themes/default/css/public.css');?>">
+    <link rel="stylesheet" href="<?php echo base_url('themes/default/css/common.css');?>">
     <script>
         (function(){
             function change(){
@@ -29,19 +28,25 @@
         <span>订单确认</span>
         <a></a>
     </div>
+    <form id="confirm_form">
+        <input type="hidden" name="addressid" value="0">
+    </form>
+
     <div class="address">
         <input type="text" id="addressid" placeholder="请输入收货地址。。">
     </div>
     <div class="listCont">
         <ul>
+            <?php foreach($carts['goods'] as $cart) :?>
             <li class="clearfix libox">
-                <img src="img/1.jpg" alt="">
-                <span>中石化加油卡</span>
+                <img src="<?php echo base_url('public/uploads/shihua.jpg');?>" alt="">
+                <span><?php echo $cart['name'];?></span>
                 <div>
-                    <p class="p1">￥179</p>
-                    <p class="p2">X3</p>
+                    <p class="p1">￥<?php echo $cart['price'];?></p>
+                    <p class="p2">X<?php echo $cart['qty'];?></p>
                 </div>
             </li>
+            <?php endforeach;?>
         </ul>
     </div>
     <div class="priceBox clearfix">
@@ -51,14 +56,15 @@
             <li style="color: #666666">总金额（含运费）：</li>
         </ul>
         <ul class="ul2">
-            <li>￥888</li>
-            <li>+￥8</li>
-            <li style="color: red; font-size: 16px;">+￥998.0</li>
+            <li>￥<?php echo $carts['totalAmount'];?></li>
+            <li>+￥0</li>
+            <li style="color: red; font-size: 16px;">+￥<?php echo $carts['totalAmount'];?></li>
         </ul>
     </div>
     <div>
         <button class="confirmBtn " id="submit_order">提交订单</button>
     </div>
+    <script src="<?php echo base_url('themes/default/js/zepto.min.js');?>" type="text/javascript" charset="utf-8"></script>
     <script>
         // 提交订单并微信支付
         var submitflag = false;
@@ -67,17 +73,20 @@
                 return;
             }
 
-            var addressid = $('#addressid').val();
+            var addressid =11;// $('#addressid').val();
             if(addressid == ''){
                 alert('请输入收货地址！');
                 return;
             }
+            //给隐藏控件赋值
+            $('#confirm_form input[name=addressid]').val(addressid);
+
 
             submitflag = true;
-            $.post('/order/submit_order', $('#confirm_form').serialize(), function(jd){
-                if(jd.success){
+            $.post("<?php echo site_url('order/submit_order');?>", $('#confirm_form').serialize(), function(jd){
+                if(jd.success==1){
                     submitflag = false;
-                    location.href = '/order/online_charge/' + jd.data;
+                    location.href ="<?php echo site_url('order/online_charge');?>" + jd.data;
                 }else{
                     $.alert(jd.msg);
                     submitflag = false;
