--- a/themes/default/order_confirm.html
+++ b/themes/default/order_confirm.html
@@ -49,6 +49,9 @@
             <?php endforeach;?>
         </ul>
     </div>
+    <div>
+        <input type="text" placeholder="请输入备注信息" style="border: none; width: 16rem; height: 30px; padding-left: 15px; box-sizing: border-box;">
+    </div>
     <div class="priceBox clearfix">
         <ul class="ul1">
             <li>商品总金额：</li>
